src/Tests/Spectre.Console.Cli.Tests/Expectations/Arguments/UnexpectedCharacter.Output.verified.txt
Error: An error occured when parsing template.
       Encountered unexpected character '$'.

       <FOO> $ <BAR>
             ^ Unexpected character